# taizen

./: .gitignore  Cargo.toml  LICENSE  README.md  readme.md
.devcontainer/: devcontainer.json
src/: content.rs  gui.rs  main.rs  program_arguments.rs  theme.rs
