[package]
name = "taizen"
license = "MIT"
version = "0.1.1"
edition = "2021"
authors = [
  "NerdyPepper <akshayoppiliappan@gmail.com>",
  "Christopher R. Bilger <christopherbilg@gmail.com>",
]
description = "TUI MediaWiki browser"
repository = "https://github.com/NerdyPepper/taizen"
readme = "README.md"
keywords = ["wikipedia", "tui", "app", "curses"]
categories = ["command-line-utilities"]

[dependencies]
reqwest = "0.9.24"
serde_json = "1.0.96"
cursive = "0.20.0"
regex = "1.8.3"
url = "2.3.1"
clap = "3.2.25"
lazy_static = "1.4.0"
dirs = "5.0.1"
percent-encoding = "2.2.0"
